# FastAPI-Vue-OAuth2

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  README_zh.md  docker-compose.yml  note.md  routes.md
backend/: .dockerignore  .env  Dockerfile  app.py  pyproject.toml  requirements.txt  run.py
backend/api/: auth.py  me.py  user.py
backend/auth/: action.py  utils.py
backend/crud/: dependencies.py  user.py
backend/database/: config.py
backend/models/: user.py
backend/schemas/: token.py  user.py
backend/setting/: .env  config.py  production.env
client/: .env  Dockerfile  index.html  package.json
client/src/: App.vue  main.js
client/src/api/: http.js
client/src/components/: ForgetPass.vue  NavBar.vue
client/src/router/: index.js
client/src/store/: index.js
client/src/views/: ForgetView.vue  (+6 more)
conf.d/: nginx.conf
docs/: README_zh.md
frontend/: .env.k8s  .env.production  Dockerfile  index.html  package.json  vite.config.js
frontend/src/: App.vue  main.js
k8s/: Makefile  ingress-tls.yaml  ingress.yaml  namespace.yaml  secrets.yaml
k8s/backend/: deployment.yaml  hpa.yaml  pod.yaml  service.yaml
k8s/database/: service.yaml  statefulset.yaml
k8s/frontend/: deployment.yaml  service.yaml
k8s/postgresql/: statefulset.yaml
nginx/: Dockerfile
server/: .env  Dockerfile  app.py
server/api/: auth.py  myself.py  user.py
server/auth/: action.py  auth.py  utils.py
server/crud/: dependencies.py  user.py
server/database/: config.py
server/models/: database.py  user.py
server/schemas/: token.py  user.py
(+33 files in other folders)
